# DbStressTest

./: CMakeLists.txt  DbStressTest.pro  DbStressTest.rc  TODO.md  connectionparameters.cpp  connectionparameters.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  stable.h  version.h
db/: dbcommon.h  dbconnection.cpp  dbconnection.h  dbconnectiondetails.h  dbmanager.cpp  dbmanager.h  scopedtransaction.cpp  scopedtransaction.h
delegates/: numericdelegate.cpp  numericdelegate.h
dialogs/: queryeditdialog.cpp  queryeditdialog.h  queryeditdialog.ui  sqlconnectiondialog.cpp  sqlconnectiondialog.h  sqlconnectiondialog.ui
helpers/: settingshelper.cpp  settingshelper.h  xlsxhelper.cpp  xlsxhelper.h
models/: checkableproxymodel.cpp  checkableproxymodel.h  querymodel.cpp  querymodel.h  querystatsmodel.cpp  querystatsmodel.h
objects/: configuration.cpp  configuration.h  query.cpp  query.h  querycontroller.cpp  querycontroller.h  querydef.cpp  querydef.h  querystats.cpp  querystats.h  querytimings.cpp  querytimings.h  queryworker.cpp  queryworker.h
other/: example_cfg.json  settings.ini
serializers/: configserializer.cpp  configserializer.h  dbserializer.cpp  dbserializer.h
